# hello-agents

./: .gitignore  MY_README.md  pyproject.toml
docs/: 4 智能体经典范式构建.md
my_playground/chap13_my_trip_planner/backend/app/api/: main.py
my_playground/chap13_my_trip_planner/frontend/src/services/: api.ts
scripts/: my_clean_chapters.sh  rename.sh
